--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -1,10 +1,7 @@
 {
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-c164abe9.css",
+    "file": "_app/immutable/assets/_layout-bd730def.css",
     "src": "src/routes/+layout.css"
-  },
-  "_paths-b4419565.js": {
-    "file": "_app/immutable/chunks/paths-b4419565.js"
   },
   ".svelte-kit/generated/nodes/1.js": {
     "file": "_app/immutable/chunks/1-44f714d7.js",
@@ -12,6 +9,20 @@
     "isDynamicEntry": true,
     "imports": [
       "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
+  },
+  "_paths-b4419565.js": {
+    "file": "_app/immutable/chunks/paths-b4419565.js"
+  },
+  "__layout-025914ab.js": {
+    "file": "_app/immutable/chunks/_layout-025914ab.js"
+  },
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-b31845be.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/0.js": {
@@ -23,16 +34,8 @@
       "src/routes/+layout.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-b31845be.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+page.svelte"
-    ]
-  },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-46839bf1.js",
+    "file": "_app/immutable/chunks/3-faf20104.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
@@ -47,8 +50,14 @@
       "__layout-025914ab.js"
     ]
   },
-  "__layout-025914ab.js": {
-    "file": "_app/immutable/chunks/_layout-025914ab.js"
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-3c9c4b50.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-92993a8b.js",
+      "_singletons-9dad9941.js"
+    ]
   },
   "src/routes/+layout.svelte": {
     "file": "_app/immutable/components/pages/_layout.svelte-3b6d2c5c.js",
@@ -58,16 +67,7 @@
       "_index-92993a8b.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-c164abe9.css"
-    ]
-  },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-3c9c4b50.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-92993a8b.js",
-      "_singletons-9dad9941.js"
+      "_app/immutable/assets/_layout-bd730def.css"
     ]
   },
   "_singletons-9dad9941.js": {
@@ -87,18 +87,19 @@
     ]
   },
   "src/routes/privacy/+page.svelte": {
-    "file": "_app/immutable/components/pages/privacy/_page.svelte-f922e210.js",
+    "file": "_app/immutable/components/pages/privacy/_page.svelte-08b2d05e.js",
     "src": "src/routes/privacy/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-92993a8b.js"
+      "_index-92993a8b.js",
+      "_paths-b4419565.js"
     ]
   },
   "_index-92993a8b.js": {
     "file": "_app/immutable/chunks/index-92993a8b.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-600f01f2.js",
+    "file": "_app/immutable/start-25ac4f82.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
